[gd_scene load_steps=10 format=3 uid="uid://dbqb3xltsqep3"]

[ext_resource type="Script" path="res://GDScript/Audio_GDScript/settings.gd" id="1_vle06"]
[ext_resource type="Texture2D" uid="uid://d0px4kvtsfa2h" path="res://Assets/BGMenu/menubackground1.png" id="2_0vy6q"]
[ext_resource type="Script" path="res://GDScript/Audio_GDScript/audio.gd" id="2_lgmjq"]
[ext_resource type="FontFile" uid="uid://dqtkhlcv16x37" path="res://Fonts/HIROMISAKE.ttf" id="4_2wljj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jatpo"]
texture = ExtResource("2_0vy6q")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rdimg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3s6r1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qj4v7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y6mhu"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vle06")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_jatpo")

[node name="Audio" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_lgmjq")

[node name="VBoxContainer" type="VBoxContainer" parent="Audio"]
layout_mode = 0
offset_left = 399.0
offset_top = 265.0
offset_right = 728.0
offset_bottom = 422.0
theme_override_constants/separation = 8

[node name="Sounds" type="Label" parent="Audio/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("4_2wljj")
theme_override_font_sizes/font_size = 20
text = "Sounds
"

[node name="Sounds_Slide" type="HSlider" parent="Audio/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.05

[node name="SFX" type="Label" parent="Audio/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("4_2wljj")
theme_override_font_sizes/font_size = 25
text = "SFX"

[node name="SFX_Slide" type="HSlider" parent="Audio/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.05

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 524.0
offset_top = 516.0
offset_right = 602.0
offset_bottom = 555.0
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_2wljj")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_rdimg")
theme_override_styles/hover = SubResource("StyleBoxFlat_3s6r1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qj4v7")
theme_override_styles/normal = SubResource("StyleBoxEmpty_y6mhu")
text = "Back"
flat = true

[connection signal="mouse_exited" from="Audio/VBoxContainer/Sounds_Slide" to="Audio" method="_on_sounds_slide_mouse_exited"]
[connection signal="value_changed" from="Audio/VBoxContainer/Sounds_Slide" to="." method="_on_sounds_slide_value_changed"]
[connection signal="mouse_exited" from="Audio/VBoxContainer/SFX_Slide" to="Audio" method="_on_sfx_slide_mouse_exited"]
[connection signal="value_changed" from="Audio/VBoxContainer/SFX_Slide" to="." method="_on_sfx_slide_value_changed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
